# trend-scout

./: .gitignore  AI_TRANSFORMATION_COMPLETE.md  HUGGINGFACE_GPT_OSS_INTEGRATION.md  README.md  analyze_database_structure.py  analyze_opportunities.py  check_and_fix_database.py  check_database.py  collect_micro_opportunities.py  com.trendscout.daily.plist  create_trending_selection.py  daily_automation.py  daily_automation_schema.sql  daily_automation_schema_fixed.sql  debug_scraper.py  fix_daily_rankings.py  generate_ai_recommendations.py  generate_daily_brief.py  get_categories.py  ios_optimized_ai_recommender.py  production_collect.py  pyproject.toml  recover_data.py  requirements.txt  run_daily.sh  schema_alignment_update.sql  setup_daily_automation.py  setup_data_retention.py  supabase.sql  targeted_collection.py  test_alignment.py  test_automation.py  test_raw.json  test_supabase_connection.py  trending_definition.md  update_dates_quickfix.py  view_data.py
.github/: SETUP_GUIDE.md
.github/workflows/: daily-automation.yml  test-automation.yml
Trend Scout/: Package.swift
Trend Scout/Trend Scout/: ContentView.swift  TrendScoutApp.swift
Trend Scout/Trend Scout.xcodeproj/: project.pbxproj
data/2025-08-19_23-34-49/: ai_recommendations.json  run_metadata.json  scout_results.json  trending_selections.json
data/2025-08-19_23-36-24/: ai_recommendations.json  run_metadata.json  scout_results.json  trending_selections.json
data/2025-08-21_22-19-10/: ai_recommendations.json  run_metadata.json  scout_results.json  trending_selections.json
data/2025-08-24_23-25-49/: ai_recommendations.json  run_metadata.json  scout_results.json  trending_selections.json
tests/: __init__.py  test_models.py  test_rss.py  test_score.py  test_scrape.py  test_store.py
trendscout/: __init__.py  ai_recommender.py  cli.py  config.py  local_storage.py  models.py  rss.py  score.py  scrape.py  store.py
(+21 files in other folders)
